Fix icon alignment in contact section and edit more css

--- a/src/App.css
+++ b/src/App.css
@@ -6,5 +6,5 @@ body {
 .App {
   text-align: center;
   user-select: none;
-
+  font-family: 'Alegreya Sans SC', sans-serif;
 }
